# rusty-bikes

./: .gitignore  404.html  CLAUDE.md  COPYING.md  Cargo.toml  Makefile  README.md  staticGeoJsonResponse.geojson  template.yaml
.beads/: .migration-hint-ts  config.yaml  dolt-monitor.pid  dolt-server.activity  dolt-server.pid  issues.jsonl  metadata.json
.beads/dolt.20260315T214341Z.corrupt.backup/: config.yaml
.claude/: settings.json
.docs/: architecture.md  client.md  deployment.md  services.md
.docs/plans/: mobile-client.md  performance-optimizations.md
.github/workflows/: deploy-gh-pages.yml
client/: .dependency-cruiser.cjs  .env.example  README.md  eslint.config.js  index.html  map.js  package.json  rainbowvis.js  styles.css  tsconfig.json  vite.config.js
client-mobile/: .env.local  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
client-mobile/src/: App.svelte  main.ts
client-mobile/src/components/: CostSlider.svelte  InstructionPanel.svelte  MapView.svelte  NavigationFooter.svelte  NavigationHeader.svelte  OffRoutePrompt.svelte  SearchInput.svelte  SettingsPanel.svelte
client-mobile/src/lib/: cache.ts  config.ts  gps.ts  navigation.ts
client-mobile/src/modules/: map.mts
client-mobile/src/store/: cost.ts  fetch.ts  gps.ts  nav.ts  route.ts  (+1 more)
client/src/: App.svelte  config.ts  consts.ts  main.ts  style.css  vite-env.d.ts
leaflet-client/: index.html  styles.css
sample_requests/: single_bushwick_greenpoint.json
server/: Cargo.toml  README.md
server/sample_requests/: multi_bushwick_greenpoint.json
server/src/: geojson.rs  lib.rs  main.rs  osm.rs
server/src/osm/: db.rs  etl.rs  graph.rs  traversal.rs
server/static_responses/: multi_bushwick_greenpoint.geojson
services/: .env.example  Cargo.toml  README.md
services/benches/: basic-benchmarking.rs  current.out  routing.rs
services/scripts/: download_osm_data.sh
services/src/: geojson.rs  lib.rs  osm.rs  search.rs
services/tests/: corridor.rs  navigate-request.json  route-request.json  snapping.rs  way-labeling.rs  way_labeling.rs
src/: db.rs  geojson.rs  lib.rs  main.rs  math.rs  osm.rs
src/osm/: graph.rs
static_responses/: single_route.geojson  two_routes.geojson
vite-client/: README.md  eslint.config.js  package.json  vite.config.js
vite-client/src/: config.ts  consts.ts  main.ts  style.css
(+66 files in other folders)
