[package]
name = "rusty_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
sqlx-sqlite = "0.7.4"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing-subscriber = "0.3.18"
