[package]
name = "rusty_router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
dotenvy = "0.15.7"
geo = "0.28.0"
geojson = "0.24.1"
lambda_http = { version = "0.11.1", features = ["apigw_http"] }
lambda_runtime = "0.11.2"
query_map = "0.7.0"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
